@startuml arob nutrition

title arob nutrition


class MealPlan {
  boolean from_nutitionist
}

class Meal {
  Enum type
  String name
  Date date
}

class FoodGroup {
  String name
}

class Food {
  String name
}

class Portion {
  Float servings
  Bigint food_group_id
  Bigint meal_id
  Bigint food_id
}

class ServingDefinitons {
  Bigint food_group_id
  Bigint food_id
  Bigint serving_unit_id
  Float serving_quantity
}

class ServingUnits {
  String name
  String abbreviation
}


Meal  *--> Portion : has_many
Portion --> FoodGroup : has_one
Portion <--> Food : has_many
Food --> ServingDefinitons : has_many
FoodGroup --> ServingDefinitons : has_many
ServingDefinitons --> ServingUnits : has_one

MealPlan o--> Meal : has_many

@enduml
